# Aether

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  benchmarks_and_notes.md
bench/: bench_spmc_queue.cpp
include/aether/: compressor.h  config.h  decompressor.h  footer.h  io_backend.h  memory_pool.h  mmap_reader.h  platform.h  reorder_buffer.h  serializer.h  spmc_queue.h  thread_pool.h  types.h
src/: compress.cpp  compressor.cpp  decompress.cpp  decompressor.cpp  footer.cpp  io_backend_factory.cpp  io_backend_sync.cpp  io_backend_uring.cpp  main.cpp  mmap_reader.cpp  reorder_buffer.cpp  serializer.cpp  thread_pool.cpp
tests/: test_footer.cpp  test_roundtrip.cpp  test_seek.cpp  test_spmc_queue.cpp
